--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 16px;
   line-height: 1;
 }
@@ -8,14 +8,14 @@ textarea{
   background: transparent;
   border: none;
   resize: none;
-  color: #000000;
+  color: black;
   border-left: 1px solid black;
   padding: 10px;
 }
 
 .jumbotron {
   text-align: center;
-  background-color: transparent;
+  background-color: goldenrod;
   color: black;
   border-radius: 0;
   border-bottom: 10px solid black;
@@ -40,33 +40,33 @@ textarea{
 .hour {
   background-color: #ffffff;
   color: #000000;
-  border-top: 1px dashed #000000;
+  border-top: 1px dashed black; 
+  border-bottom: 1px dashed black; 
+  border-left: 1px dashed black; 
 }
 
 /* update these to the colors that I would like them to be  */
 .past {
   background-color: #d3d3d3;
-  color: white;
+  color: black;
 }
 
 .present {
   background-color: #ff6961;
-  color: white;
+  color: black;
 }
 
 .future {
-  background-color: #77dd77;
-  color: white;
+  background-color: palegoldenrod;
+  color: black;
 }
 
 .saveBtn {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #06AED5;
-  color: white;
-  /* height: 100%;
-  width: 100%; */
+  background-color: goldenrod;
+  color: black;
 }
 
 .saveBtn i:hover {
@@ -74,7 +74,7 @@ textarea{
   transition: all .3s ease-in-out;
 }
 
-
-/* style set ups to block out where the row is */
-/* 
+.far {
+  font-size: 200%;
+}
 
